<resources>
    <string name="app_name">Profitable Shopping</string>
    ///////////////////GoogleApi/////////////////////////////
    <string name="maps_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDF6_-KV-EbxSGgq-0lZpKRGyct8BVFFGM</string>

    ////////////menu///////////////////////////////////////////
    <string name="home">الرئيسية</string>
    <string name="cart">السلة</string>
    <string name="search">البحث</string>
    <string name="Notification">الاشعارات</string>
    <string name="Profile">حسابي</string>

    ////////////////////////////////////////////////////////////

    <string name="logout">تسجيل الخروج</string>

    ////////////////////////category///////////////////////////////

    <string name="category_name">ملابس نسائية</string>
    <string name="category_update">تعديل</string>
    <string name="category_delete">حذف</string>
    <string name="category_save">حفظ</string>
    <string name="category_add">اضافة</string>
    <string name="add_new_category">اضافة صنف جديد</string>
    <string name="backed">تراجع</string>
    <string name="cancel">الغاء</string>
    <string name="title_update">تعديل الصنف</string>
    <string name="title_delete">حذف الصنف</string>

    <string name="txt_add_photo">قم بأختيار صورة الصنف</string>
    <string name="txt_add_photo_product">اختر صور المتج</string>


    ////////////////////// product////////////////////////////
    <string-array name="category">
        <item>bags</item>
        <item>glasses</item>
        <item>watches</item>
        <item>shoes0</item>
    </string-array>

    <string name="name_product">اسم المنتج</string>
    <string name="rail_price_product">سعر المنتج بالريال</string>
    <string name="dollar_price_product">سعر المنتج بالدولار</string>
    <string name="quntity_product">كمية المنتج</string>
    <string name="description_product">وصف عن المنتج</string>
    <string name="add_product">اضافة المنتج</string>
    <string name="add_photo">اضافة صورة المنتج</string>


    ///////////////////////connect//////////////
    <string name="no_network">لا يوجد أتصال بشبكة الإنترنت</string>
    <string name="no_network_desc">الخدمة غير متوفرة لديك حاليا !! عليك ان تكون متصلاً بالأنترنت.</string>
    <string name="try_again">إعادة المحاولة</string>
    <string name="add_product_label">اضافة منتج</string>
    <string name="my_products">منتجاتي</string>
    <string name="categories">الاصناف</string>
    <string name="about_us">حول التطبيق</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="settings">الاعدادات</string>
    <string name="category_hint">ما نوع المنتج الذي تريد اضافته:</string>
    <string name="sign_in_tv">تسجيل دخول</string>
    <string name="email_tv">"الايميل "</string>
    <string name="sign_btn">تسجيل دخول</string>
    <string name="new_user">مستخدم جديد؟</string>
    <string name="sign_up">انشاء حساب</string>
    <string name="phone_num">رقم الهاتف </string>
    <string name="password">كلمة المرور</string>
    <string name="sign_up_tv">انشاء حساب</string>
    <string name="person_info">البيانات الشخصية </string>
    <string name="username_tv">اسم المستخدم</string>
    <string name="email_sign_up_tv">الايميل</string>
    <string name="confirmpassword">تاكيد كلمة المرور</string>
    <string name="sign_up_btn">نسجيل</string>
    <string name="verify_Messsage">تحتاج الى تاكيد ملكية حسابك عبر الهاتف اضغط الزر ادناه للمتابعة</string>
    <string name="phone_auth_btn">التسجيل برقم الهاتف</string>
    <string name="get_otp">الحصول على رمز التحقق</string>
    <string name="enter_otp">ادخل رمز التحقق</string>
    <string name="actinve_acount">تفعيل الحساب</string>
    <string name="card_item_options">تفضيلات المنتج</string>
    <string name="quantity_option">ادخل الكمية المطلوبة</string>
    <string name="add_item_to_cart">اضافة الى السلة</string>


    //////////////////////////////////////
    <string name="Category">الأصناف</string>
    <string name="Products">المنتجات</string>
    <string name="size_of_product">اختر حجم المنتج</string>
    <string name="color_of_product">اختر لون المنتج</string>
    <string name="total_of_price">السعر الاجمالي</string>
    <string name="hide_product">اخفاء</string>
    <string name="complain_title">مقترحات البلاغات</string>
    <string name="txt_complain">اكتب مقترح بلاغ</string>
    <string name="write_complain">اكتب عنوان البلاغ</string>
    <string name="send">ارسال</string>
    <string name="enter_title">ادخل العنوان</string>
    <string name="enter_message">ادخل الاشعار</string>
    <string name="notifications">ارسال الاشعارات</string>
    <string name="valuation_product">تقيـيـم المـنـتـج</string>
    <string name="write_comment">اكـتـب تـعليقـاً</string>
    <string name="favorite">المفضلة</string>
    <string name="Settings">الاعدادات</string>
    <string name="cart_empty">السلة فارغة</string>
    <string name="show_comments">عرض التعليقات</string>
    <string name="quantity">الكمية :</string>
    <string name="register">تسجيل</string>
    <string name="as_user">المتابعة كزائر</string>

    /////////////////////////////////////////

    <string-array name="admin_list">
        <item>الاصناف</item>
        <item>ارسال الاشعارات</item>
        <item>إضافة بلاغ</item>
        <!--<item>تغيير كلمة المرور</item>-->
        <item>تواصل معنا</item>
        <item>حول التطبيق</item>
        <item>تسجيل الخروج</item>
    </string-array>

    <string-array name="user_list">
        <item>حسابي</item>
        <item>منتجاتي</item>
        <item>مشترياتي</item>
        <item>مبيعاتي</item>
        <item>تواصل معنا</item>
        <item>حول التطبيق</item>
        <item>تسجيل الخروج</item>
    </string-array>

    <string name="phone">رقم الهاتف</string>
    <string name="email">الايميل</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="confirm_password">تاكيد كلمة المرور</string>
    <string name="report_on_product">بلغ عن المنتج</string>
    <string name="spiner_nothing_selected_message">عليك اختيار صنف</string>
    <string name="forget_password">هل نسيت كلمة السر؟</string>
    <string name="about_app">
        تطبيق التسوق المربح يساعدك للحصول على اهم المنتجات التي يتم انزالها في السوق حيث يتم معرفة كل المنتجات مع اسعارها والتعامل مع البائعين مباشرة</string>
    <string name="count_poroduct">عدد المنتجات</string>
    <string name="date_of_sales">تاريخ الشراء</string>
    <string name="total_price">اجمالي السعر</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="skip">تخطي</string>

    <string name="is_empty">هذا الحقل مطلوب</string>
    <string name="member_details3">" أتطلع للبحث عن منصب مليء بالتحديات والمسؤولية حيث يمكن الاستفادة من قدراتي بشكل كبير وفعال ، والمساهمة في بالاستمرار بالتطور، مما يوفر فرصًا لاكتساب المزيد من المعرفة ، وتعلم المزيد من المهارات ، وتطويرها إلى أقصى مستوى "</string>
    <string name="hide_category">اخفاء</string>
    <string name="forgot_your_password">هل نسيت كلمة المرور؟</string>
    <string name="message_of_forgit">" لإعادة تعيين كلمة المرور ، أدخل بريدك الإلكتروني ، واضغط على الزر وتحقق من البريد لاتباع التعليمات."</string>
    <string name="reset_password">ا إعادة تعيين كلمة المرور</string>
    <string name="back">عودة</string>
    <string name="my_product">منتجاتي</string>
    <string name="my_pruchases">مشترياتي</string>
    <string name="my_sales">مبيعاتي</string>
    <string name="calling">اتصال</string>
    <string name="seller_page">صفحة البائع</string>

</resources>