<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/menu_shopping_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/cart"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>

    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/ic_notifications_none"
        android:title="@string/Notification"/>

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/Profile"/>
</menu>