<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_login"
        android:icon="@drawable/ic_home"
        android:title="تسجيل الدخول" />

    <item
        android:id="@+id/menu_my_products"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/my_products" />

    <item
        android:id="@+id/menu_categories"
        android:icon="@drawable/ic_search"
        android:title="@string/categories" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_notifications_none"
        android:title="@string/settings" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_person"
        android:title="@string/about_us" />
    <item
        android:id="@+id/sign_out"
        android:icon="@drawable/ic_person"
        android:title="تسجيل خروج" />
</menu>