<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    tools:context=".view.products.fragments.ProductFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:elevation="12dp"
            app:cardCornerRadius="10dp">

            <Spinner
                android:id="@+id/spinner_all_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/category"
                android:padding="12dp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg5"
            android:orientation="vertical"
            android:padding="12dp">

            <EditText
                android:id="@+id/et_name_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:hint="@string/name_product" />

            <EditText
                android:id="@+id/et_rial_price_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:hint="@string/rail_price_product" />

            <EditText
                android:id="@+id/et_dollar_price_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:hint="@string/dollar_price_product" />

            <EditText
                android:id="@+id/et_quantity_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:hint="@string/quntity_product" />

            <EditText
                android:id="@+id/et_desc_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:hint="@string/description_product" />
            <Button
                android:id="@+id/btn_load_photo_product"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:background="@drawable/bg3"
                android:gravity="center"
                android:text="@string/add_photo"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add_product"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:background="@drawable/bg3"
                android:gravity="center"
                android:text="@string/add_product"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

</FrameLayout>