<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/reset_password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:src="@drawable/icon4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rb_light"
            android:padding="10dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/rb_light"
            android:gravity="center_horizontal"
            android:padding="14dp"
            android:text="@string/message_of_forgit"
            android:textSize="14dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtResetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp"
            android:hint="Your email here"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rb_light"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:fontFamily="@font/rb_light"
            android:paddingStart="55dp"
            android:paddingTop="8dp"
            android:paddingEnd="60dp"
            android:paddingBottom="10dp"
            android:text="@string/back"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>
