<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="6dp"
    android:background="@color/white"
    tools:context=".data.firebase.NotifationActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:cardBackgroundColor="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_edit_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/rb_light"
                android:gravity="center"
                android:text="@string/notifications"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg8"
                android:orientation="vertical"
                android:padding="10dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:fontFamily="@font/rb_light"
                        android:hint="@string/enter_message"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/etToken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/rb_light"
                    android:hint="Enter Token"
                    android:inputType="textPersonName"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:fontFamily="@font/rb_light"
                        android:hint="@string/enter_title"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bg4"
                    android:text="@string/send" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>