<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:fontFamily="@font/rb_light"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ly"
        android:layout_width="404dp"
        android:layout_height="642dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/bg4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/user_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:fontFamily="@font/rb_light"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rb_light"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rb_light"
                            android:inputType="phone"
                            android:maxLength="9"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rb_light"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        app:passwordToggleEnabled="true"
                        android:layout_marginBottom="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rb_light"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@color/colorPrimary"
                        android:fontFamily="@font/rb_light"
                        android:padding="10dp"
                        android:text="@string/register"
                        android:textSize="18sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="3">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1.2"
                        android:background="#000" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:gravity="center"
                        android:text="Or"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1.2"
                        android:background="#000" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/rb_light"
                    android:padding="8dp"
                    android:text="Login"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>


        </ScrollView>


    </LinearLayout>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/image_preview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="6dp"
        android:src="@drawable/icon2"
        app:civ_border="true"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"
        android:translationY="40dp"
        app:layout_constraintBottom_toTopOf="@id/ly"
        app:layout_constraintEnd_toEndOf="@id/ly"
        app:layout_constraintStart_toStartOf="@id/ly" />

</androidx.constraintlayout.widget.ConstraintLayout>